[tool.poetry]
name = "dio"
version = "0.1.0"
description = "Repositorio Dio"
authors = ["Jose Carlos Rocha <jcr0ch4@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.13.0"
protoc-wheel = "3.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
